// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListNodeRenderer /> should error when more than one child config is supplied 1`] = `[Error: Only one child list type is currently supported]`;

exports[`<ListNodeRenderer /> should error when no child config is supplied 1`] = `[Error: <ListNodeRenderer /> component at '/' is missing config]`;

exports[`<ListNodeRenderer /> should pass the correct props to the child renderer 1`] = `
Object {
  "ErrorDisplayComponent": undefined,
  "committed": true,
  "config": Object {
    "id": "list-item",
    "name": "List item",
    "type": "string",
  },
  "configAncestry": Array [
    Object {
      "children": Array [
        Object {
          "id": "list-item",
          "name": "List item",
          "type": "string",
        },
      ],
      "description": "The name",
      "id": "name",
      "name": "Name",
      "type": "list",
    },
  ],
  "originalNodeData": "item 1 value",
  "originalNodeDataAncestry": Array [
    Array [
      "item 1 value",
      "item 2 value",
    ],
  ],
  "path": Array [
    "/",
    0,
  ],
}
`;

exports[`<ListNodeRenderer /> should render child objects correctly 1`] = `
<div>
  <div
    class="listNodeRenderer"
    data-nodepath="pages"
    data-nodetype="list"
  >
    <label
      for="pages"
    >
      Pages
    </label>
    <div
      class="items"
      data-testid="items"
    >
      <a
        class="defaultListItem"
        data-testid="default-item-view"
      >
        <div
          class="name"
        >
          Page 0 Title
        </div>
        <div
          class="description"
        >
          Page 0 description
        </div>
      </a>
      <a
        class="defaultListItem"
        data-testid="default-item-view"
      >
        <div
          class="name"
        >
          Page 1 Title
        </div>
        <div
          class="description"
        >
          Page 1 description
        </div>
      </a>
    </div>
    <button
      class="button"
      data-testid="add-item-btn"
      type="button"
    >
      [+]
    </button>
  </div>
</div>
`;

exports[`<ListNodeRenderer /> should render correctly 1`] = `
<div>
  <div
    class="listNodeRenderer"
    data-nodepath="pages"
    data-nodetype="list"
  >
    <label
      for="pages"
    >
      Pages
    </label>
    <div
      class="items"
      data-testid="items"
    >
      <a
        class="defaultListItem"
      >
        <div
          class="name"
        >
          Page 0 Title
        </div>
        <div
          class="description"
        >
          Page 0 description
        </div>
      </a>
      <a
        class="defaultListItem"
      >
        <div
          class="name"
        >
          Page 1 Title
        </div>
        <div
          class="description"
        >
          Page 1 description
        </div>
      </a>
    </div>
    <button
      class="button"
      data-testid="add-item-btn"
      type="button"
    >
      [+]
    </button>
  </div>
</div>
`;

exports[`<ListNodeRenderer /> should render items in "edit" mode correctly 1`] = `
<div>
  <div
    class="listNodeRenderer"
    data-nodepath="/"
    data-nodetype="list"
  >
    <label
      for="name"
    >
      Name
    </label>
    <p
      class="description"
    >
      The name
    </p>
    <div
      class="items"
      data-testid="items"
    >
      <div
        class="defaultItemWrapper"
        data-testid="item"
      >
        <div>
          The child item
        </div>
        <button
          class="button"
          data-testid="remove-item-btn"
          type="button"
        >
          Remove [-]
        </button>
        <button
          class="button"
          type="button"
        >
          Done
        </button>
      </div>
      <div
        class="defaultItemWrapper"
        data-testid="item"
      >
        <div>
          The child item
        </div>
        <button
          class="button"
          data-testid="remove-item-btn"
          type="button"
        >
          Remove [-]
        </button>
        <button
          class="button"
          type="button"
        >
          Done
        </button>
      </div>
    </div>
    <button
      class="button"
      data-testid="add-item-btn"
      type="button"
    >
      [+]
    </button>
  </div>
</div>
`;

exports[`<ListNodeRenderer /> should render items in "edit" mode correctly 2`] = `
Object {
  "ErrorDisplayComponent": undefined,
  "committed": true,
  "config": Object {
    "id": "list-item",
    "name": "List item",
    "type": "string",
  },
  "configAncestry": Array [
    Object {
      "children": Array [
        Object {
          "id": "list-item",
          "name": "List item",
          "type": "string",
        },
      ],
      "description": "The name",
      "id": "name",
      "name": "Name",
      "type": "list",
    },
  ],
  "originalNodeData": "item 1 value",
  "originalNodeDataAncestry": Array [
    Array [
      "item 1 value",
      "item 2 value",
    ],
  ],
  "path": Array [
    "/",
    0,
  ],
}
`;

exports[`<ListNodeRenderer /> should throw if non-array data is passed in 1`] = `[Error: 'list' renderer only works with arrays but got 'object']`;
